loki-stack down

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./influxdb/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki-stack/ks.yaml
+  #- ./loki-stack/ks.yaml
   - ./promlens/ks.yaml
   - ./thanos/ks.yaml
 
