--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -14,6 +14,16 @@ spec:
         name: grafana
         namespace: flux-system
       interval: 30m
+  maxHistory: 2
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
     loki:
       structuredConfig:
@@ -23,10 +33,8 @@ spec:
           log_level: info
           http_listen_port: 3100
           grpc_listen_port: 9095
-
         memberlist:
           join_members: ["loki-memberlist"]
-
         limits_config:
           retention_period: 14d
           enforce_metric_name: false
@@ -39,12 +47,21 @@ spec:
           shard_streams:
             enabled: true
 
+        # schema_config:
+        #   configs:
+        #     - from: "2021-08-01"
+        #       store: boltdb-shipper
+        #       object_store: s3
+        #       schema: v11
+        #       index:
+        #         prefix: loki_index_
+        #         period: 24h
         schema_config:
           configs:
-            - from: "2021-08-01"
+            - from: "2022-01-11" # quote
               store: boltdb-shipper
               object_store: s3
-              schema: v11
+              schema: v12
               index:
                 prefix: loki_index_
                 period: 24h
@@ -73,7 +90,6 @@ spec:
           ring:
             kvstore:
               store: memberlist
-
         distributor:
           ring:
             kvstore:
@@ -98,11 +114,11 @@ spec:
           reporting_enabled: false
 
       podAnnotations:
-        secret.reloader.stakater.com/reload: loki-secret
+        secret.reloader.stakater.com/reload: loki-secrets
 
     gateway:
       enabled: true
-      replicas: 3
+      replicas: 2
       ingress:
         enabled: true
         ingressClassName: internal
@@ -145,6 +161,9 @@ spec:
         storageClass: longhorn
 
     monitoring:
+      dashboards:
+        annotations:
+          grafana_folder: Loki
       serviceMonitor:
         enabled: false
         metricsInstance:
