--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -134,7 +134,7 @@ spec:
               - *host
 
     write:
-      replicas: 3
+      replicas: 2
       persistence:
         size: 10Gi
         storageClass: longhorn
@@ -145,15 +145,16 @@ spec:
         storageClass: longhorn
 
     backend:
-      replicas: 3
+      replicas: 2
       extraVolumeMounts:
         - name: rules
-          mountPath: /rules
+          mountPath: /rules/fake
         - name: scratch
           mountPath: /tmp/scratch
       extraVolumes:
         - name: rules
-          emptyDir: {}
+          configMap:
+            name: loki-alerting-rules
         - name: scratch
           emptyDir: {}
       persistence:
