--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -189,6 +189,10 @@ spec:
       targetPath: loki.structuredConfig.common.storage.s3.endpoint
     - kind: Secret
       name: loki-secrets
+      valuesKey: s3_bucket_region
+      targetPath: loki.structuredConfig.common.storage.s3.region
+    - kind: Secret
+      name: loki-secrets
       valuesKey: access_key
       targetPath: loki.structuredConfig.common.storage.s3.access_key_id
     - kind: Secret
