--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -116,7 +116,7 @@ endpoints:
       - "[STATUS] == 200"
   - name: loki
     group: monitoring
-    url: "tcp://loki-stack.monitoring.svc.cluster.local:3100"
+    url: "tcp://loki-gateway.monitoring.svc.cluster.local:3100"
     interval: 1m
     ui:
       hide-hostname: true
