--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -13,5 +13,5 @@ resources:
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
-  #- ./website/ks.yaml
+  - ./website/ks.yaml
   - ./whoami/ks.yaml
