--- a/kubernetes/apps/default/website/app/ingress.yaml
+++ b/kubernetes/apps/default/website/app/ingress.yaml
@@ -30,7 +30,29 @@ spec:
                 name: website-nginx
                 port:
                   number: 80
+    - host: "${SECRET_DOMAIN}"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: website-nginx
+                port:
+                  number: 80
+    - host: "${SECRET_DOMAIN2}"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: website-nginx
+                port:
+                  number: 80
   tls:
     - hosts:
         - "www.${SECRET_DOMAIN}"
         - "www.${SECRET_DOMAIN2}"
+        - "${SECRET_DOMAIN}"
+        - "${SECRET_DOMAIN2}"
