--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./couchdb/ks.yaml
   - ./mongodb/ks.yaml
   - ./pgadmin/ks.yaml
-  #- ./redis/ks.yaml
+  - ./redis/ks.yaml
   - ./redisinsight/ks.yaml
