--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
     master:
       persistence:
         size: 5Gi
-        existingClaim: redis-longhorn-pvc
+        existingClaim: pvc-longhorn-redis
     sentinal:
       enabled: true
       masterSet: redis-master
