--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -4,13 +4,12 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./gatus/ks.yaml
-  #- ./grafana/ks.yaml
+  - ./grafana/ks.yaml
   - ./influxdb/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kube-state-metrics/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
-  #- ./loki-stack/ks.yaml
   - ./promlens/ks.yaml
   - ./promtail/ks.yaml
   - ./thanos/ks.yaml
