--- a/kubernetes/apps/kube-system/minio/app/secret.sops.yaml
+++ b/kubernetes/apps/kube-system/minio/app/secret.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 stringData:
     MINIO_ROOT_USER: ENC[AES256_GCM,data:oY+l0IJDg+G5XA==,iv:zSyySvbKxZFrTd4ptP3OUH0C04hx20sHI+ic6dODS3c=,tag:gP3y4xoS3enoE3FDCJa1pg==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:OwglRH2YmLPfsw==,iv:+0n2jMo600yJR32RbL+wY6LmfE3jQNVdDzap5ThnLHQ=,tag:bxoFn8XPpYAgYc+soOVpxA==,type:str]
+    MINIO_PROMETHEUS_TOKEN: ENC[AES256_GCM,data:SmFx2OEcZxeHpLNh+kU7KpxYmmB0/QJR5e6ZtEgturSiUF7JxKP+KLD9Z947gV9BRBW7jjRNRShfBSiuFgrxsKzsRNrIr4tKuQjjJ2K6wFcqyFKt1Bq7lQzC4v2pKwmbmvgycvyTmMbSemSR5HyUja3lwfuIFVUfihFpZIOqlfQie8XhbhzZHxZ6GD9hc3/3jPlFnFwnuFVPyeQX0E1GAAnA4Gs2A7llkAFMg9kKBQNqihq9ECZ2PKWmHlRhYH4DyOO0qu8h+K8Fels89fEzzG3CYaI=,iv:4AK6Bg8RZ8hVX5pFDbB94AqOYveu1cnyxmpnq+Hxyls=,tag:hpxLfGrabcAUR1kVBi6DXg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             RXE1Zk5BdnpxREtNeHlwYVc3SHljZDgKhoaoI1EJ32Z51zrH1i5cZdRtRSiCdySd
             dWIXUb7IBPLxpl3giwYIB2hIZiLygOkIDDtIya1SXt8voPWx7UPWiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-29T22:38:53Z"
-    mac: ENC[AES256_GCM,data:vKOzgoEiIt/4z/BGUgz6pdqjm00fwxEL2zUjrVHk596N89vrGhVP0FsPkiDHQ2AaddV3uSN/vTPRkh3cmq1azznP9FGK2FIu4baA/MlL9EXunDUIquoAkt5+V07Q9NQ4Z0/Oi1WD6N9HLQAEqgBHHcxgYEhgQJB+TD3oSE/G7GI=,iv:P3Fmuw8gRE2g5sLWDANcJZWiYmsUrhG6m3MrnGIP/80=,tag:439TqX8RB3LzqBHC6+NY3A==,type:str]
+    lastmodified: "2023-11-13T14:37:40Z"
+    mac: ENC[AES256_GCM,data:Gi8wQiOSHJoG+GUcSEFBhMVVQQDCgiitfM0O+0NZQE6fMTredeLGCsomgxTRwfiavcTZ7c/SZoE87c9pgU5thC+N+K68FxSJt2qiFeRlRC+YwElBHzcCZy0i8jK12Q9R9eqfbdNstgE7BQsMTMsujvciKHgQ1pdJ1l0zsIYSeNU=,iv:O2DoytiMWDED1EA9V6Pi478RMXuENEbCPqzM2cmpFwY=,tag:DJ2xiJzyx1Ql3Kn5uQRzBQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.1
