--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -84,6 +84,8 @@ spec:
       main:
         enabled: true
         className: internal
+        annotations:
+          hajimari.io/icon: "mdi:chart-bar"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
