--- a/.github/workflows/publish-schemas.yaml
+++ b/.github/workflows/publish-schemas.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   publish-schemas:
     name: Publish Schemas
-    runs-on: ["arc-runner-set-home-ops"]
+    runs-on: ["arc-runner-set-home-cluster"]
     steps:
       - name: Setup Tools
         shell: bash
