--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
@@ -1,12 +1,11 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: home-cluster
   namespace: actions-runner-system
 spec:
-  interval: 15m
+  interval: 30m
   chart:
     spec:
       chart: gha-runner-scale-set
@@ -15,17 +14,17 @@ spec:
         kind: HelmRepository
         name: actions-runner-controller
         namespace: flux-system
-      interval: 15m
+  maxHistory: 2
   install:
-    createNamespace: true
     remediation:
-      retries: 5
+      retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
-    controllerServiceAccount:
-      name: actions-runner-controller-gha-rs-controller
     runnerScaleSetName: arc-runner-set-home-cluster
     githubConfigUrl: https://github.com/clarknova99/home-cluster
     minRunners: 1
@@ -36,5 +35,9 @@ spec:
       spec:
         containers:
           - name: runner
-            image: ghcr.io/onedr0p/github-actions-runner:rolling@sha256:e24bb8f3d809b706cd740c47f688dcecbf3886f3ac819d61b7b1f5644a2f091d
+            image: ghcr.io/actions/actions-runner:2.311.0
+            command: ["/home/runner/run.sh"]
     githubConfigSecret: actions-runner-controller-secrets
+    controllerServiceAccount:
+      name: actions-runner-controller-gha-rs-controller
+      namespace: actions-runner-system
