--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   #- ./jupyterhub/ks.yaml
+  - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
