--- a/.github/workflows/publish-schemas.yaml
+++ b/.github/workflows/publish-schemas.yaml
@@ -68,6 +68,7 @@ jobs:
           KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
         shell: bash
         run: |
+          kubectl get crds
           mkdir -p /home/runner/crds
           curl -fsSL -o $GITHUB_WORKSPACE/crd-extractor.sh \
               https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/Utilities/crd-extractor.sh
