--- a/.github/workflows/publish-kube-schemas.yaml
+++ b/.github/workflows/publish-kube-schemas.yaml
@@ -60,6 +60,7 @@ jobs:
       - name: Download and run crd-extractor
         shell: bash
         run: |
+          kubectl get crds
           mkdir -p /home/runner/crds
           curl -fsSL -o $GITHUB_WORKSPACE/crd-extractor.sh \
             https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/Utilities/crd-extractor.sh
