--- a/.github/workflows/publish-schemas.yaml
+++ b/.github/workflows/publish-schemas.yaml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Write kubeconfig
         id: kubeconfig
-        uses: timheuer/base64-to-file@v1.2 # v1.2.4
+        uses: timheuer/base64-to-file@ca9e30baf83f7f26708fb0059af9a0973fe5f27e # v1.2
         with:
           encodedString: ${{ secrets.KUBECONFIG }}
           fileName: kubeconfig
