--- a/kubernetes/apps/default/superset/app/helmrelease.yaml
+++ b/kubernetes/apps/default/superset/app/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -28,7 +29,7 @@ spec:
       connections:
         # -- Change in case of bringing your own redis and then also set redis.enabled:false
         redis_host: redis-master.database.svc.cluster.local
-        redis_password: ${SECRET_POSTGRES_PASSWORD}
+        #redis_password: ${SECRET_POSTGRES_PASSWORD}
         redis_port: "6379"
         # You need to change below configuration incase bringing own PostgresSQL instance and also set postgresql.enabled:false
         db_host: cloudnative-pg-cluster.database.svc.cluster.local
