--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
-  - ./superset/ks.yaml
+  #- ./superset/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
