--- a/kubernetes/apps/default/superset/app/superset.sops.yaml
+++ b/kubernetes/apps/default/superset/app/superset.sops.yaml
@@ -7,6 +7,12 @@ metadata:
 # ## sops --decrypt ./kubernetes/apps/default/superset/app/superset.sops.yaml | kubectl apply -f -
 stringData:
     SUPERSET_SECRET_KEY: ENC[AES256_GCM,data:2Nf0pgg/PD4MzBUT6Ac8q++zJQ1t6PC1ZM496P17m0Nr+RtQmBJhdw/8sullzft5WYHbkTaWWR8=,iv:QNMej2tk1eeJIKJM73ln796k4EYjuqiRP/kTde6U5h8=,tag:O53g3JaMoibeYh7YF1uSdg==,type:str]
+    DB_HOST: ENC[AES256_GCM,data:8QeEvMrLXjYDA+H1b1BY5zmQAveP9t19cGtgS2MYDQYHYmmC1moV2PwnnoLaDGinjg==,iv:70Yi3/K6OQZSjR8ljkHRUA78zJIlrpfe3wSW4AKoxIM=,tag:qruCzeeTk9hwBfnH7Q5UGQ==,type:str]
+    INIT_POSTGRES_DBNAME: ENC[AES256_GCM,data:GkZ9mwAOD7s=,iv:EibFmhTrI2QTkvjJ/0JdODdLOlV0441P+mygsT73qTY=,tag:UvBVMkXAhq4sZgrcuvJRCw==,type:str]
+    INIT_POSTGRES_HOST: ENC[AES256_GCM,data:LOAcQPARgLmGItY5P1xNoLPDKCd2eXvW4kmbjdJAvhtVzsTntJN7R+70XM7R0X0rcw==,iv:96vDY9uriBw0IfqVSJ78iAwRXONuhRMCwjlD9CvE88Y=,tag:ZEH/bGil43lzqvzUhiMbdQ==,type:str]
+    INIT_POSTGRES_USER: ENC[AES256_GCM,data:Z0K20hIbnQ==,iv:nUcUOqpdFVftv3uvZifOnGNCGgHAHAE7/5qaf6Dufcw=,tag:N78RfUJ3x1PYHOIrHpDVqw==,type:str]
+    INIT_POSTGRES_PASS: ENC[AES256_GCM,data:Nb5LHoSWvcCj,iv:lHAGdlCakF/gR8LQA9W+qRPqRjKbqKC5noGeE8i5qo8=,tag:DdjaQaUUhav4MaqInLdruQ==,type:str]
+    INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:pWqZPWX14GMY,iv:hy6mY8haCJuvl5LqS3rKV9orcmBFczkU4HUPyNCg7g4=,tag:FYtivpqGUrHJaHxwL0Eyiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +28,8 @@ sops:
             UjFIRmdDaUx5SHd4Z2czbXFEVHhEbXcK3Bz+zXBWSDmnJHqpJy9nKLXUFEkhp6tt
             GP+jJWUzYWGhO/ZQrjZayZi42secOaLpK9/2bIxtI0+ZEMDfIo3HOQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-20T23:26:54Z"
-    mac: ENC[AES256_GCM,data:K1no0l564i8cGBrfysf2vX+mklHyC6v7FbBnM2NwWRYidPp1EnMEf5opUsiXzUcLhpZ83p5nDb/U0Sag4bSvVF7PBW/H2nYdd0FUYmTzZ+P4XeBu8HCv74146Gd5Ev23Fd+GX2xgjw6Ldnt+X1HL2slxjxouvqv8VVOm44oDvOU=,iv:pWscpirVskwkm1rd4T67qKj8UzHdOh573WmqzGhMVv4=,tag:hHotm8HKYc6fMZmmch0pSQ==,type:str]
+    lastmodified: "2023-11-15T04:07:45Z"
+    mac: ENC[AES256_GCM,data:JwV3blcv9FF8jQJ5vavkqFcr89Imgd5y0rZOyY7An1W7HczNglTW9I3bIxUZ8GXJhyS0I3U5saoi6qeEhA2qonFh2yYweLqPzxVZoXugD3t6WJ0tkAm4v/Ki81ewGAPj5NVb6qF2Rk9ySwyPrW+mxfTcTbEAO/V9PfY96vUV2SU=,iv:MIfRsv+xvVnkyV8cxRZWii1qEXhm2jdZ8nQcMTtQFYY=,tag:ghL//c1jPPvWN36b+bm/zg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
