--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.2.0
       interval: 30m
       sourceRef:
         kind: HelmRepository
@@ -18,29 +18,33 @@ spec:
         namespace: flux-system
 
   values:
-    image:
-      repository: docker.io/n8nio/n8n
-      tag: 1.17.0
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: docker.io/n8nio/n8n
+              tag: 1.17.0
 
-    env:
-      GENERIC_TIMEZONE: ${TIMEZONE}
-      N8N_PORT: &port 80
-      N8N_HOST: &host "n8n.${SECRET_DOMAIN}"
-      WEBHOOK_URL: "https://n8n.${SECRET_DOMAIN}"
-      N8N_LOG_LEVEL: info
-      N8N_LOG_OUTPUT: console
-      N8N_PERSONALIZATION_ENABLED: false
-      N8N_VERSION_NOTIFICATIONS_ENABLED: false
-      N8N_DIAGONISTICS_ENABLED: false
-      N8N_HIRING_BANNER_ENABLED: false
-      N8N_USER_MANAGEMENT_DISABLED: true
-      N8N_METRICS: true
-      DB_TYPE: postgresdb
-      DB_POSTGRESDB_DATABASE: n8n
-      DB_POSTGRESDB_HOST: cloudnative-pg-cluster.database.svc.cluster.local
-      DB_POSTGRESDB_USER: postgres
-      DB_POSTGRESDB_PASSWORD: ${SECRET_POSTGRES_PASSWORD}
-      DB_POSTGRESDB_PORT: 5432
+            env:
+              GENERIC_TIMEZONE: ${TIMEZONE}
+              N8N_PORT: &port 80
+              N8N_HOST: &host "n8n.${SECRET_DOMAIN}"
+              WEBHOOK_URL: "https://n8n.${SECRET_DOMAIN}"
+              N8N_LOG_LEVEL: info
+              N8N_LOG_OUTPUT: console
+              N8N_PERSONALIZATION_ENABLED: false
+              N8N_VERSION_NOTIFICATIONS_ENABLED: false
+              N8N_DIAGONISTICS_ENABLED: false
+              N8N_HIRING_BANNER_ENABLED: false
+              N8N_USER_MANAGEMENT_DISABLED: true
+              N8N_METRICS: true
+              DB_TYPE: postgresdb
+              DB_POSTGRESDB_DATABASE: n8n
+              DB_POSTGRESDB_HOST: cloudnative-pg-cluster.database.svc.cluster.local
+              DB_POSTGRESDB_USER: postgres
+              DB_POSTGRESDB_PASSWORD: ${SECRET_POSTGRES_PASSWORD}
+              DB_POSTGRESDB_PORT: 5432
 
     service:
       main:
