--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -37,38 +38,25 @@ spec:
       enabled: true
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
-      enabled: false
-      # ingress:
-      #   enabled: true
-      #   pathType: Prefix
-      #   ingressClassName: internal
-      #   hosts:
-      #     - alertmanager.${SECRET_DOMAIN}"
-      #   tls:
-      #     - hosts:
-      #         - alertmanager.${SECRET_DOMAIN}"
-      # alertmanagerSpec:
-      #   storage:
-      #     volumeClaimTemplate:
-      #       spec:
-      #         storageClassName: local-path
-      #         resources:
-      #           requests:
-      #             storage: 1Gi
-    # kube-state-metrics:
-    #   metricLabelsAllowlist:
-    #     - "deployments=[*]"
-    #     - "persistentvolumeclaims=[*]"
-    #     - "pods=[*]"
-    #   prometheus:
-    #     monitor:
-    #       enabled: true
-    #       relabelings:
-    #         - action: replace
-    #           sourceLabels: ["__meta_kubernetes_pod_node_name"]
-    #           regex: ^(.*)$
-    #           replacement: $1
-    #           targetLabel: kubernetes_node
+      #enabled: false
+      ingress:
+        enabled: true
+        pathType: Prefix
+        ingressClassName: internal
+        hosts:
+          - alertmanager.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - alertmanager.${SECRET_DOMAIN}"
+      alertmanagerSpec:
+        storage:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: local-path
+              resources:
+                requests:
+                  storage: 1Gi
+
     kubelet:
       enabled: true
       serviceMonitor:
