--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -47,15 +48,6 @@ spec:
           shard_streams:
             enabled: true
 
-        # schema_config:
-        #   configs:
-        #     - from: "2021-08-01"
-        #       store: boltdb-shipper
-        #       object_store: s3
-        #       schema: v11
-        #       index:
-        #         prefix: loki_index_
-        #         period: 24h
         schema_config:
           configs:
             - from: "2022-01-11" # quote
