--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   - ./loki/ks.yaml
   - ./promlens/ks.yaml
   - ./promtail/ks.yaml
-  - ./smartctl-exporter/ks.yaml
+ # - ./smartctl-exporter/ks.yaml
   - ./thanos/ks.yaml
 
