--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -30,6 +30,13 @@ spec:
     - name: longhorn
       namespace: longhorn-system
   values:
+    extraInitContainers:
+      - name: 01-init-db
+        image: ghcr.io/onedr0p/postgres-init:14.9
+        imagePullPolicy: IfNotPresent
+        envFrom:
+          - secretRef:
+              name: grafana-admin-secret
     deploymentStrategy:
       type: Recreate
     admin:
@@ -40,8 +47,11 @@ spec:
       GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
       GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://auth.${SECRET_DOMAIN}/api/oidc/token
       GF_EXPLORE_ENABLED: true
+      GF_FEATURE_TOGGLES_ENABLE: publicDashboards
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SERVER_ROOT_URL: "https://grafana.${SECRET_DOMAIN}"
       GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ${SECRET_GRAFANA_OAUTH_CLIENT_SECRET}
+      GF_SECURITY_COOKIE_SAMESITE: grafana
       GF_SMTP_ENABLED: true
       GF_SMTP_HOST: "${SECRET_MAIL_HOST}:${SECRET_MAIL_PORT}"
       GF_SMTP_FROM_ADDRESS: grafana@${SECRET_DOMAIN}
