--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -6,6 +6,18 @@ metadata:
 stringData:
     admin-password: ENC[AES256_GCM,data:t4r4C6eGgmp6,iv:OCWNTmUQSOWkhgL57QWxxL8OsKqUqkU/dRcQOMhNqwg=,tag:6fp4E1+BorRb0uOdRiWZAg==,type:str]
     admin-user: ENC[AES256_GCM,data:Lq05wuY=,iv:CjuEm7MvZkDJ0mL5WcuId1K6u2UET5Yb/yXQx4/CxVk=,tag:fkxc2NGxxqRTH35ofiOPlg==,type:str]
+    GF_DATABASE_NAME: ENC[AES256_GCM,data:1LgfAOYAzg==,iv:vDbQ1uwl4ajCfTPig3NO4A2e/nxW1BOaYJg/YYB45yQ=,tag:N+egGfdT2s66QmiAHWEn0A==,type:str]
+    GF_DATABASE_HOST: ENC[AES256_GCM,data:YZjo0TMc7rgtTFvkLKBFLIQF0kO9OnGftBnfEUZ/eKIqP15BExvlgQUTlY6jxu1v/Q==,iv:bj7gOwLfTfBFSTbZIYdSrKnZWjnuker1MVlUtQ6FRj4=,tag:7gwOBL22PxT8u40Rmm6L7g==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:734nN3aitL8=,iv:z0eYkj2ACK1JJRZieg9r6Bh20qMwMgFxoi5n1CUseF4=,tag:C6WtMm+50chA+xeh1y+zvA==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:q58U0IEemqkv,iv:ZkmewRn9o+v1NAXSHQxrzwSx55ABIj+KA8wkcL3Uzc8=,tag:Q/Df/shG9TDnrFaEgTTumQ==,type:str]
+    GF_DATABASE_SSL_MODE: ENC[AES256_GCM,data:ruvI+ZoMzA==,iv:YIlA8OKLQlZjJx6Rseljn7ybZPFRh/RwYsEB4nnW8VM=,tag:olQz1g5XbfOsqD+hBByFLg==,type:str]
+    GF_DATABASE_TYPE: ENC[AES256_GCM,data:mw9fAGNXRu0=,iv:kC2ZIwjHJwHVwoOx/alGb4pGoHkNhcjbBkBEBkBC058=,tag:SPt+LgQA9wybrt4lnNPBdA==,type:str]
+    #ENC[AES256_GCM,data:cqkV037LYhAg5UUWyIE=,iv:0128L8Lu8e+nLHRL+/8QKxyREF0Ux4WXuASUxyWYes8=,tag:WAQDkNsheGv7pw5OX5ijiw==,type:comment]
+    INIT_POSTGRES_DBNAME: ENC[AES256_GCM,data:604fC9svIA==,iv:aUw/VqHmo90KH3ovgZT66UFwNNCSwuxD0YVFMgj+H6E=,tag:Bq2bu1Rif1zTnhp1tRCm9g==,type:str]
+    INIT_POSTGRES_HOST: ENC[AES256_GCM,data:kMbRVOycgObOUZIRpnshIssaux9w1qHglmfkjXihQMwqqsdGc+dNRncGoS6BIL+OxA==,iv:pQ424JbrRjekK9eJGhwc5nSntxokEPJ4ksFKH+iTg3Q=,tag:rs4FEqNxdVOKBAkBIKXs2Q==,type:str]
+    INIT_POSTGRES_USER: ENC[AES256_GCM,data:gZamBtyIuWE=,iv:Kn5W8+AXktrvUechL5Awrf37LVLfIlPjz6i60a1Bo2E=,tag:Ytx8RPHZQitXtjO90gOSNA==,type:str]
+    INIT_POSTGRES_PASS: ENC[AES256_GCM,data:9Yi3EH+g864U,iv:WgWS/MVCfQaksju8cgSrqyusvJUINwSvgyYWwTj+Fi0=,tag:2OcM/WUNLCplwLJ6Cs1aog==,type:str]
+    INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:+kR7Pg4br/Zt,iv:YBnm/U7CCoH9IfY5oTJs4Qkb8A/DifvifhAPDqICnt0=,tag:X8jJjTFsB00cc1pWLG0/5g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +33,8 @@ sops:
             RXE1Zk5BdnpxREtNeHlwYVc3SHljZDgKhoaoI1EJ32Z51zrH1i5cZdRtRSiCdySd
             dWIXUb7IBPLxpl3giwYIB2hIZiLygOkIDDtIya1SXt8voPWx7UPWiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-25T00:01:15Z"
-    mac: ENC[AES256_GCM,data:lRj/C0BG1hJr1Fjx385wBUqJBRQ+xfYKzfqP0UyICB1+UyHUn+qGMTbQo0Hc9oUl5JtZbv5q6X1YgLUoUO3o/NsKH7DYFMaI68rpEPsvrWVTVEgoTVikymMC250UeA9R1YByqXORGmE5hvHOPIeVqe242NxT+0ue89xJRXhRTcs=,iv:iUdy4LWGLUhV0eWOsUpPHyAzLRoqqO0KMqwamg1iz3w=,tag:wIl+LoJ9IHqA5ZYjEx8nig==,type:str]
+    lastmodified: "2023-11-17T01:01:43Z"
+    mac: ENC[AES256_GCM,data:I4yQJLrCEmLjtsF5TDbgbSQpKQsR+0XFaoX/hWFhP4Twp02cjvoaELfEpkzBr+rzqF6ktujVSpUOP3mUatIqYdOxjDJ2NF0Ha4K9/gTDjqDMONuB9lTq5CHbhUwEnqKT8PLIN+t8pujg6hVl3TvBXPfl8/V0VN63tr6ncC20dAs=,iv:VO0xs6NUlLEUsO2lXNHRvYj7w3cq1E4XLwQbhT/erVg=,tag:UwPG1DIyZW8eplZNG5nUlQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.1
