--- a/kubernetes/apps/flux-system/addons/app/notifications/github/notification.yaml
+++ b/kubernetes/apps/flux-system/addons/app/notifications/github/notification.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: flux-system
 spec:
   type: github
-  address: https://github.com/onedr0p/home-ops
+  address: https://github.com/clarknova99/home-cluster
   interval: 10m
   secretRef:
     name: github-webhook-token-secret
