flux-system notifications

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -19,6 +19,8 @@ stringData:
     SECRET_MAIL_PORT: ENC[AES256_GCM,data:fFtj,iv:bZpLnHbHGNgDV9dxxb6p5lCnUYv9AA/TZgWr/XgOIHM=,tag:cADCsZUsoFRBAQQgzmnxFQ==,type:str]
     SECRET_TOOLJET_MASTER_KEY: ENC[AES256_GCM,data:g/Cjxb1fyLxWIxDSmTjEMg0jJRKyayUndRAhua4fE6EuHtjLyiwLfSKQEEP/jBr1b5fbJAloY3sN/khVf+JaPw==,iv:N9pwSxEuW3u3qlmqAVDjnBqiP86O+jg/fvDdks5afUk=,tag:v7PbN/oJhOvcvEj41DdCVQ==,type:str]
     SECRET_TOOLJET_KEY_BASE: ENC[AES256_GCM,data:p196Ydby7QZGGpWPtVjdcfo3JbfVmYo0wDCBoVcDl+rgK0V5mngCgL9qRyC6hsDCYfHNXfLhcNzsZEELlAUXIUBscRkjkdngCEG78xggz9/XTxrYwhTXiuQlBeVbGOCskfaBmZvPiOaiZ29CJk1F93RvHW+06ner+9/yfOZvQXI=,iv:3te3+b9lLt1JXLj63cNdsdhyvV9Izs26LVH9xYVMU/Y=,tag:NvB/sCrnICjs24GY0qjAqA==,type:str]
+    SECRET_PUSHOVER_USER_KEY: ENC[AES256_GCM,data:0ulH2yV1SnfKO5Xb+iwLJr/vDPeHRmXex1bph1ki,iv:UMo6PgXO3yBH5yQXDpicyAuC2BuJFNOeCKfCqnXIp6s=,tag:i18U88EpXuWE43SBq3GcLQ==,type:str]
+    SECRET_PUSHOVER_TOKEN: ENC[AES256_GCM,data:Wzg0hKYYAO3Uyr+bK4aFI3o9qz8NcFQA94nv1G8S,iv:UVp385YO3uV+CRi/yWkh5VRCS3/z10FyAmUbDWfHCVU=,tag:Md2AI0sOFw6Pl1CMPZq0Xg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,8 +36,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-04T03:29:10Z"
-    mac: ENC[AES256_GCM,data:/ocBTxGJ0JHKu45dxjyio9rmsDTgG8QnFz7HZNOlqZ5eJKxdpwKtNLmBZkXeV+8GniY8qdrMT46VehYHK2hG+TQQGm/v+uSewmM+DYfMwkeMuIxeGbpX1WmNGKPTk3iV3BuydcUU4cPIkowuNTxMe3QiUkaHOiPTQzHpmgJVLtA=,iv:Tgy3yhsNBh4T2x4To8Cav3WfWOa6DzxPdhhay3uDW3c=,tag:GKaCHkltfWgl1/j0sms9+Q==,type:str]
+    lastmodified: "2023-11-18T18:48:18Z"
+    mac: ENC[AES256_GCM,data:3e5T8zgV8g312ZJH8vWPk8vTebnE2QJL2a2ZnyNX7jGqMuSGavprpQso+WvNMZSiGw2GFWxBmTyjeqGS2DpaakLlyoZ57bzVw5/kNaIaJBB1GVrdlhTv10UNO2CgshGZIuPtsCuSqq95qtUwTL6UBnlEK01UnwoSC2IYKlPVgyI=,iv:jW8y8YOEw8Zt7FmeZMOTtWsd343PyJrHrVfXkHd4quU=,tag:OTmW77D2UcCcgtOWeTriaQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
