--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/config/alertmanager.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/config/alertmanager.yaml
@@ -1,21 +1,36 @@
 ---
 global:
   resolve_timeout: 5m
-  slack_api_url: "https://hooks.slack.com/services/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"
-
 route:
   group_by: ["alertname", "job"]
   group_interval: 10m
   group_wait: 1m
-  receiver: 'slack'
-
-receivers:
-  - name: 'slack'
-    slack_configs:
-      - send_resolved: true
-        title: >-
-          {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
-          [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
+  receiver: pushover
+  repeat_interval: 12h
+  routes:
+    - receiver: heartbeat
+      group_interval: 5m
+      group_wait: 0s
+      matchers:
+        - alertname =~ "Watchdog"
+      repeat_interval: 5m
+    - receiver: "null"
+      matchers:
+        - alertname =~ "InfoInhibitor"
+    - receiver: pushover
+      continue: true
+      matchers:
+        - severity = "critical"
+inhibit_rules:
+  - equal: ["alertname", "namespace"]
+    source_matchers:
+      - severity = "critical"
+    target_matchers:
+      - severity = "warning"
+  - name: "null"
+  - name: pushover
+    pushover_configs:
+      - html: true
         message: |-
           {{ "{{-" }} range .Alerts {{ "}}" }}
             {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
@@ -35,3 +50,13 @@ receivers:
               </small>
             {{ "{{-" }} end {{ "}}" }}
           {{ "{{-" }} end {{ "}}" }}
+        priority: |-
+          {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
+        send_resolved: true
+        sound: gamelan
+        title: >-
+          {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
+          [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
+        token: "${{SECRET_PUSHOVER_TOKEN }}"
+        url_title: View in Alertmanager
+        user_key: "${{SECRET_PUSHOVER_USER_KEY }}"
