--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -92,9 +92,9 @@ spec:
                 title: >-
                   {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
                   [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
-                token: "${{SECRET_PUSHOVER_TOKEN }}"
+                token: "${SECRET_PUSHOVER_TOKEN}"
                 url_title: View in Alertmanager
-                user_key: "${{SECRET_PUSHOVER_USER_KEY }}"
+                user_key: "${SECRET_PUSHOVER_USER_KEY}"
       ingress:
         enabled: true
         pathType: Prefix
