--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -83,10 +83,10 @@ spec:
         pathType: Prefix
         ingressClassName: internal
         hosts:
-          - alertmanager.${SECRET_DOMAIN}"
+          - alertmanager.${SECRET_DOMAIN}
         tls:
           - hosts:
-              - alertmanager.${SECRET_DOMAIN}"
+              - alertmanager.${SECRET_DOMAIN}
       alertmanagerSpec:
         replicas: 2
         storage:
