--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -67,7 +67,24 @@ spec:
             pushover_configs:
               - html: true
                 message: |-
+                  {{ "{{-" }} range .Alerts {{ "}}" }}
+                    {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
+                      {{ "{{" }} .Annotations.description {{ "}}" }}
+                    {{ "{{-" }} else if ne .Annotations.summary "" {{ "}}" }}
+                      {{ "{{" }} .Annotations.summary {{ "}}" }}
+                    {{ "{{-" }} else if ne .Annotations.message "" {{ "}}" }}
+                      {{ "{{" }} .Annotations.message {{ "}}" }}
+                    {{ "{{-" }} else {{ "}}" }}
                       Alert description not available
+                    {{ "{{-" }} end {{ "}}" }}
+                    {{ "{{-" }} if gt (len .Labels.SortedPairs) 0 {{ "}}" }}
+                      <small>
+                      {{ "{{-" }} range .Labels.SortedPairs {{ "}}" }}
+                        <b>{{ "{{" }} .Name {{ "}}" }}:</b> {{ "{{" }} .Value {{ "}}" }}
+                      {{ "{{-" }} end {{ "}}" }}
+                      </small>
+                    {{ "{{-" }} end {{ "}}" }}
+                  {{ "{{-" }} end {{ "}}" }}
                 priority: |-
                   {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
                 send_resolved: true
