--- a/kubernetes/apps/monitoring/alertmanager/ks.yaml
+++ b/kubernetes/apps/monitoring/alertmanager/ks.yaml
@@ -7,10 +7,11 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: "./kubernetes/apps/monitoring/alertmanager/app"
+  path: ./kubernetes/apps/monitoring/alertmanager/app
+
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-kubernetes
+    name: home-kubernetes
   wait: true
 
