--- a/kubernetes/apps/monitoring/alertmanager/ks.yaml
+++ b/kubernetes/apps/monitoring/alertmanager/ks.yaml
@@ -3,15 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: alertmanager
+  name: cluster-apps-alertmanager
   namespace: flux-system
 spec:
-  interval: 10m
   path: ./kubernetes/apps/monitoring/alertmanager/app
-
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  wait: true
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
 
