--- a/kubernetes/apps/flux-system/addons/app/notifications/alert-manager/notification.yaml
+++ b/kubernetes/apps/flux-system/addons/app/notifications/alert-manager/notification.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: alertmanager
   #address: http://alertmanager-operated.monitoring.svc.cluster.local:9093/api/v2/alerts/
-  address: http://kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local:9093/api/v2/alerts/
+  address: http://alertmanager.monitoring.svc.cluster.local:9093/api/v2/alerts/
   # address: http://vmalertmanager-victoria-metrics.monitoring.svc.cluster.local:9093/api/v2/alerts/
   interval: 10m
 ---
